tests/toy/neg/000268_mutation.toylang
program a = { do var a : bool; } .
